--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,3 +1,12 @@
 app:
   port: 6969
   log: true
+
+db:
+  username: "postgres"
+  password: "postgres"
+  database: "go_anon"
+  host: "localhost"
+  port: 5432
+  log: true
+  sync: true
